--- a/Dashboard/react/src/index.css
+++ b/Dashboard/react/src/index.css
@@ -29,3 +29,14 @@
 .bg-Darktheme {
     background-color: rgb(13, 13, 13);
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
